apps/development/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
        name: redis
    spec:
      containers:
      - name: redis
        image: redis:latest 
        args: ["--appendonly", "yes"]
        ports:
          - name: redis
            containerPort: 6379
        volumeMounts:
          - name: redis-persistent-storage
            mountPath: /data
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: development
spec:
  selector:
    app: redis
  ports:
    - name: http
      protocol: TCP
      port: 6379
      targetPort: 6379
