apps/development/dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: development
  labels:
    app: dotnet
spec:
  replicas: 5
  selector:
    matchLabels:
      name: dotnet
  template:
    metadata:
      labels:
        name: dotnet
    spec:
      containers:
        - name: dotnet
          image: fclebinho/weatherforecast:1.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: development
  labels:
    app: dotnet
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: dotnet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  generation: 5
  name: dotnet-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: dotnet.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: dotnet-service
            port:
              number: 8080
        path: /weatherforecast/
        pathType: Prefix
  tls:
  - hosts:
    - dotnet.kub3.dev
    secretName: le-dotnet-dev-cert-tls
