apps/development/drone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: development
  labels:
    name: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      name: drone
  template:
    metadata:
      labels:
        name: drone
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drone-svc
  namespace: development
  labels:
    name: drone
spec:
  ports:
  - port: 3000
    name: drone
  selector:
    app: drone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  generation: 1
  name: drone-route
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: drone.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: sonar
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - drone.kub3.dev
    secretName: le-drone-kub3-dev-cert-tls
