apps/development/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    meta.helm.sh/release-name: harbor-demo
    meta.helm.sh/release-namespace: harbor
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  creationTimestamp: '2024-09-01T17:26:03Z'
  generation: 1
  labels:
    app: harbor
    app.kubernetes.io/instance: harbor-demo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: 2.11.0
    chart: harbor
    heritage: Helm
    release: harbor-demo
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:ingress.kubernetes.io/proxy-body-size: {}
            f:ingress.kubernetes.io/ssl-redirect: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
            f:nginx.ingress.kubernetes.io/ssl-redirect: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:chart: {}
            f:heritage: {}
            f:release: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: helm
      operation: Update
      time: '2024-09-01T17:26:03Z'
  name: harbor-demo-ingress
  namespace: harbor
  resourceVersion: '56476'
  uid: 5ed2f26a-87e4-4e27-b69f-cadf1469ec0c
spec:
  rules:
    - host: registry.kub3.dev
      http:
        paths:
          - backend:
              service:
                name: harbor-demo-core
                port:
                  number: 80
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: harbor-demo-core
                port:
                  number: 80
            path: /service/
            pathType: Prefix
          - backend:
              service:
                name: harbor-demo-core
                port:
                  number: 80
            path: /v2/
            pathType: Prefix
          - backend:
              service:
                name: harbor-demo-core
                port:
                  number: 80
            path: /chartrepo/
            pathType: Prefix
          - backend:
              service:
                name: harbor-demo-core
                port:
                  number: 80
            path: /c/
            pathType: Prefix
          - backend:
              service:
                name: harbor-demo-portal
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - registry.kub3.dev
      secretName: le-registry-kub3-dev-cert-tls
status:
  loadBalancer: {}
