apps/development/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-deployment
  namespace: development
  labels:
    app: sonar
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:8.9.1-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: app-pvc
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: app-pvc
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "2048Mi"
      volumes:
      - name: app-pvc
        persistentVolumeClaim:
          claimName: sonar-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  namespace: development
  labels:
    app: sonar
spec:
  ports:
  - port: 9000
    name: sonar
  selector:
    app: sonar
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  generation: 4
  name: sonar-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.kub3.dev
    http:
      paths:
      - backend:
          service:
            name: sonar-service
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarqube.kub3.dev
    secretName: le-sonar-kub3-dev-cert-tls
